# maxtext

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .test_durations  .yamllint  1b-experiments-7-20-mhr.sh  1b-experiments-7-20.txt  1b-experiments-7-20.txt:q  1b-experiments-fwd-meta-big-keys.txt  1b-experiments-fwd-meta.txt  1b-experiments-int8-meta-big-keys.txt  1b-experiments-int8-meta.txt  1b-experiments-off-meta-big-keys.txt  1b-experiments-off-meta.txt  1b-grain-tpu.sh  1m_compile.sh  1m_context.sh  8b-experiments-7-25-meta-big-keys.txt  8b-experiments-7-25-meta.txt  8b-experiments-bfloat16-7-25-meta.txt  8b-experiments-fwd-off-7-25-meta.txt  =0.1.4  =0.1.41  AGENTS.md  AUTHORS  CLAUDE.md  CONTRIBUTING.md  CROSS_LAYER_FEASIBILITY.md  CROSS_LAYER_IMPLEMENTATION_PLAN.md  CROSS_LAYER_PREFETCH_SKETCH.md  DEEPSEEK_CONVERTER_PLAN.md  DEEPSEEK_PLAN.md  (+601 more)
.agents/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dev-requirements.txt  requirements.txt
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
GKE_docker_image_tool/: build_docker_image.sh  maxtext.Dockerfile
MaxText/: HF_data.ipynb  __init__.py  accelerator_to_spec_map.py  analyze_sharegpt.py  anomalies_repro.py  attentions_test.py  benchmark_chunked_prefill.py  benchmark_inference_request.py  benchmark_offline_engine.py  benchmark_prefix_cache_transfer_between_host_device.py  broadcast_one_to_all_test.py  checkify_debug.py  checkpoint_conversion_utils.py  checkpoint_handlers.py  checkpointing.py  checkpointing_test.py  checkpointing_v0.py  ckpt_benchmarker.py  ckpter_benchmark.py  cluster_create.sh  common_types.py  config.py  constants.py  convert_ckpt.py  convert_deepseek_60.py  convert_deepseek_ckpt.py  convert_deepseek_ckpt_shared_brr.py  convert_deepseek_family_ckpt.py  convert_deepseek_family_unscanned_ckpt.py  convert_deepseek_unscanned_ckpt.py  convert_deepseek_unscanned_ckpt_mtp.py  convert_gamma_chkpt.py  convert_gemma2_chkpt.py  convert_gemma3_chkpt.py  convert_gemma_chkpt.py  convert_gpt3_ckpt_from_paxml.py  convert_gpt3_ckpt_step.py  convert_gpt_oss_unscanned_ckpt.py  convert_jsonl_to_tfrecord.py  convert_llama_ckpt.py  (+275 more)
apis/: gcp_config.py  metric_config.py  task.py  test_config.py  xlml_controller.py
app/: llama3-1-70b-bf16-64n-sts.pbtxt
assets/: llama_add_chinese_other.model  tokenizer  tokenizer.mistral-v3  tokenizer_llama3.tiktoken
base_requirements/: requirements.txt  tpu-base-requirements.txt
benchmarks/: Getting_Started_Benchmarking.md  __init__.py  args_helper.py  benchmark_db_utils.py  benchmark_runner.py  benchmark_utils.py  command_utils.py  globals.py  llama2_70b_v5p_benchmark.py  llama2_v6e-256_benchmarks.py  llama3.1_405b_v5p_benchmark.py  llama3.1_v6e-256_benchmarks.py  maxstar_model_configs.py  maxtext_training_configs.py  maxtext_trillium_model_configs.py  maxtext_v5e_model_configs.py  maxtext_v5p_model_configs.py  maxtext_viperfish_model_configs.py  maxtext_xpk_runner.py  maxtext_xpk_runner_sa_sweep.py  model_configs.py  pw_remote_python_recipe.py  upload_metrics_to_bq.py  xla_flags_library.py  xpk_configs.py
brahmai-tokenizer/: chat_template.jinja  tokenizer_config.json
configs/: README.md  composer_env.py  gcs_bucket.py  test_owner.py  vm_resource.py
dags/: composer_env.py  gcs_bucket.py  test_owner.py  vm_resource.py
datasets/: convert_arrayrecord_to_tfrecord.py  generate_tfds_metadata.py  get_minimal_c4_en_dataset.py  get_minimal_hf_c4_parquet.py
deepseek4-references/: conversion_mapping.md  conversion_mapping.py  conversion_mapping_task.md  huggingface_structure.txt  maxtext_structure.txt
deployment/: .terraform.lock.hcl  README.md  bigquery.auto.tfvars  bigquery_template.tf  cloud_composer.auto.tfvars  cloud_composer_template.tf  clusters.tf  provider.tf
distill_scripts/: convert-hf-to-maxtext.sh  convert-llama-to-maxtext.sh  convert-llama-tpu-to-maxtext.sh  run_distill.sh  run_distill_llama3_1_8b.sh  run_distill_test.sh
docs/: Run_MaxText_via_xpk.md  about.md  advanced_usage.md  aqt_deprecation_phase_2_execution_plan.md  build_maxtext.md  checkpointing.md  code-of-conduct.md  concepts.md  conf.py  contributing.md  data_loading.md  development.md  explanations.md  features_and_diagnostics.md  full_finetuning.md  gce_gke_xpk.md  getting_started.md  grpo.md  guides.md  index.html  index.md  install_maxtext.md  math_verify_pool_port.md  profiling.md  reference.md  release_notes.md  remat_policy.md  requirements.txt  run_maxtext.md  sft.md  sharding.md  single_host_gpu.md  terminologies.md  tutorials.md  uxr_usability_test_plan.md
dot_module/: dot.py  test.py  test2.py  test3.py
end_to_end/: eval_assert.py  gamma_finetuning_test.sh  gpt3_test.sh  llama_finetuning_test.sh  llama_load_and_test.sh  mistral_load_and_test.sh  test_checkpoint_compatibility.sh  test_checkpoint_resharding.sh  test_checkpointing.sh  test_checkpointing_v4_16_one_slice.sh  test_checkpointing_v4_16_two_slice.sh  test_checkpointing_v4_8_one_slice.sh  test_convergence_1b_params.sh  test_convergence_1b_params_grain.sh  test_cpu_decode_16b.sh  test_cpu_decode_8b.sh  test_decode.sh  test_decode_checkpoint.sh  test_decode_v4_8_one_slice.sh  test_determinism.sh  test_determinism_v4_16_two_slice.sh  test_gamma.sh  test_gemma.sh  test_generate_param_only_checkpoint.sh  test_gpt3.sh  test_gpt3_6b.sh  test_hlo_correctness.sh  test_jdi.sh  test_llama2.sh  test_llama2_13b.sh  test_llama2_13b_chkpt.sh  test_llama2_13b_convert_chkpt.sh  test_llama2_add_chinese.sh  test_mistral.sh  test_mixtral.sh  test_mtc_phase_2_save_path.sh  test_multi_tier_checkpointing.sh  test_profiler.py  test_tflops.sh  test_tflops_128b_params_large_seq_len.sh  (+11 more)
examples/: grpo_demo.ipynb  install_tunix_vllm_requirement.sh  logit_distillation.ipynb  qlora_demo.ipynb  qlora_demo_bridged.ipynb  qwen3_example.ipynb
experiments_20230715/: 1b.sh  2b.sh  8b.sh
generated_requirements/: cuda12-requirements.txt  tpu-requirements.txt
hack/: Dockerfile  (+1 more)
(+4584 files in other folders)
