[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/MaxText/__init__.py"

[project]
name = "maxtext"
description = "MaxText is a simple, performant and scalable Jax LLM!"
dynamic = ["version", "optional-dependencies"]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
keywords = ["llm", "jax", "llama", "mistral", "mixtral", "gemma", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: ML",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tpu = ["dependencies/requirements/generated_requirements/tpu-requirements.txt"]
cuda12 = ["dependencies/requirements/generated_requirements/cuda12-requirements.txt"]

[project.urls]
Repository = "https://github.com/AI-Hypercomputer/maxtext.git"
"Bug Tracker" = "https://github.com/AI-Hypercomputer/maxtext/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/MaxText", "src/install_maxtext_extra_deps"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks.py"

[project.scripts]
install_maxtext_github_deps = "install_maxtext_extra_deps.install_github_deps:main"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 122
indent-width = 2

target-version = "py312"

[tool.ruff.lint]
# TODO: Replace all pylint ignores in codebase with "noqa" equivalents, so all rules that pylint checks can be enabled:
select = ["E9"]
#ignore = ["R0401","R0917","W0201","W0613"]
#ignore = ["R4","R9","W201","W613"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

indent-style = "space"
docstring-code-format = false
