[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/MaxText/__init__.py"

[project]
name = "maxtext"
description = "MaxText is a simple, performant and scalable Jax LLM!"
dynamic = ["version", "optional-dependencies"]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
keywords = ["llm", "jax", "llama", "mistral", "mixtral", "gemma", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: ML",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tpu = ["dependencies/requirements/generated_requirements/tpu-requirements.txt"]
tpu-post-train = ["dependencies/requirements/generated_requirements/tpu-post-train-requirements.txt"]
cuda12 = ["dependencies/requirements/generated_requirements/cuda12-requirements.txt"]
docs = ["dependencies/requirements/requirements_docs.txt"]

[project.urls]
Repository = "https://github.com/AI-Hypercomputer/maxtext.git"
"Bug Tracker" = "https://github.com/AI-Hypercomputer/maxtext/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/MaxText", "src/maxtext", "src/install_maxtext_extra_deps"]

# TODO: Add this hook back when it handles device-type parsing
# [tool.hatch.build.targets.wheel.hooks.custom]
# path = "build_hooks.py"

[project.scripts]
install_maxtext_tpu_github_deps = "install_maxtext_extra_deps.install_github_deps:main"
install_maxtext_cuda12_github_deps = "install_maxtext_extra_deps.install_github_deps:main"
install_maxtext_tpu_post_train_extra_deps = "install_maxtext_extra_deps.install_post_train_extra_deps:main"
